--- a/package.json
+++ b/package.json
@@ -5,8 +5,11 @@
   "private": true,
   "main": "index.js",
   "scripts": {
-    "start": "npx zenn preview --port 65535",
-    "article": "npx zenn new:article"
+    "start": "run-p preview server",
+    "preview": "npx zenn preview --port 65535",
+    "server": "browser-sync start --config bs-config.js",
+    "article": "npx zenn new:article",
+    "book": "npx zenn new:book"
   },
   "repository": {
     "type": "git",
@@ -14,5 +17,9 @@
   },
   "dependencies": {
     "zenn-cli": "^0.1.32"
+  },
+  "devDependencies": {
+    "browser-sync": "^2.26.12",
+    "npm-run-all": "^4.1.5"
   }
 }
