--- a/package.json
+++ b/package.json
@@ -11,10 +11,8 @@
     "book": "zenn new:book",
     "init": "zenn init"
   },
-  "dependencies": {
-    "zenn-cli": "^0.1.88"
-  },
   "devDependencies": {
-    "npm-run-all": "^4.1.5"
+    "npm-run-all": "^4.1.5",
+    "zenn-cli": "^0.1.89"
   }
 }
