--- a/package.json
+++ b/package.json
@@ -15,5 +15,9 @@
   "devDependencies": {
     "npm-run-all": "^4.1.5",
     "zenn-cli": "^0.1.128"
+  },
+  "volta": {
+    "node": "16.17.1",
+    "yarn": "1.22.19"
   }
 }
