--- a/books/617d8f9d6bd78b/config.yaml
+++ b/books/617d8f9d6bd78b/config.yaml
@@ -1,7 +1,7 @@
 title: "FirebaseとTypeScriptとNext.jsを使ってリアルタイムチャットアプリを作ろう"
 summary: "この本ではFirebaseとTypeScriptとNext.jsを使ってリアルタイムチャットアプリを作ります。"
 topics: ['react','firebase','typescript','nextjs']
-published: false
+published: true
 price: 0 # 有料の場合200〜5000
 # 本に含めるチャプターを順番に並べましょう
 chapters:
